added more images

--- a/templates/CPSapp/homepage.html
+++ b/templates/CPSapp/homepage.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <img class="load"  src="https://source.unsplash.com/960x640/?beach" alt="Image" 
+        <img class="load"  src="https://source.unsplash.com/960x640/?beach,mountains,tourism" alt="Image" 
            style = "height: auto; margin-top: 110px; margin-left: 50px; width: 100%; max-width:585px;">
       </div>
     </div>  
