--- a/templates/CPSapp/homepage.html
+++ b/templates/CPSapp/homepage.html
@@ -29,7 +29,7 @@
           <li><a class="navbar-brand" href="#">News</a></li>
           &nbsp;
           &nbsp;
-          <li><a class="navbar-brand" href="#">About</a></li>
+          <li><a class="navbar-brand" href="/aboutme">About</a></li>
         </ul>
       </div>
 </nav>
