--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
 /* Center the loader */
 #loader {
   position: absolute;
-  left: 50%;
-  top: 50%;
+  left: 78%;
+  top: 67%;
   z-index: 1;
   width: 120px;
   height: 120px;
@@ -64,9 +64,42 @@
 </style>
 </head>
 <body onload="myFunction()" style="margin:0;">
-    <div id="loader"></div>
+    
+
+    <nav class="navbar navbar-expand-sm bg-info navbar-dark">
+      <div class="container-fluid">
+          <div class="navbar-header">
+              <a class="navbar-brand" href="/home">
+                  <img src="{% static 'CPSapp/TourismIcon.jpg' %}" class="rounded-circle" alt="Logo" style="width:40px;">
+                </a>  
+              <a class="navbar-brand" href="/home">Avoid Crowd</a>
+          </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a class="navbar-brand" href="/home">Home</a></li>
+            &nbsp;
+            &nbsp;
+            <li class="nav-item dropdown"><a class="navbar-brand dropdown-toggle" id="navbardrop" data-toggle="dropdown" href="#">Destination</a>
+              <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Mumbai</a>
+                  <a class="dropdown-item" href="#">Pune</a>
+                  <a class="dropdown-item" href="#">Nashik</a>
+                  <a class="dropdown-item" href="#">Nagpur</a>
+              </div>
+            </li>
+              
+            &nbsp;
+            &nbsp;
+            <li><a class="navbar-brand" href="#">News</a></li>
+            &nbsp;
+            &nbsp;
+            <li><a class="navbar-brand" href="/aboutme">About</a></li>
+          </ul>
+        </div>
+  </nav>
     {% block content %}
 
     {% endblock %}
+
+  
 </body>
 </html>
