--- a/templates/CPSapp/homepage.html
+++ b/templates/CPSapp/homepage.html
@@ -19,10 +19,10 @@
 
 <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-3 col-md-6" style="margin-top: 180px;">
+      <div class="col-sm-3 col-md-6" style="margin-top: 160px;">
         <h1 style="text-align: center;">HOW BUSY IS YOUR FAVOURITE TOURIST DESTINATION?</h1>
         <div style="text-align: center;">
-        <p><small>Predict and Avoid Crowd smartly with us.... </small></p>
+        <p>Predict and Avoid Crowd smartly with us.... </p>
         <form action="/page2/" method="post">
           {% csrf_token %}
         <small>Enter number of the week:</small><br>
@@ -37,7 +37,7 @@
       </div>
       <div class="col-md-6">
         <img class="load"  src="https://source.unsplash.com/960x640/?beach,mountains,tourism" alt="Image" 
-           style = "height: auto; margin-top: 110px; margin-left: 50px; width: 100%; max-width:585px;">
+           style = "height: auto; margin-top: 100px; margin-left: 50px; width: 100%; max-width:585px;">
       </div>
     </div>  
 </div>  
