--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 #loader {
   position: absolute;
   left: 78%;
-  top: 67%;
+  top: 69%;
   z-index: 1;
   width: 120px;
   height: 120px;
@@ -66,11 +66,11 @@
 <body onload="myFunction()" style="margin:0;">
     
 
-    <nav class="navbar navbar-expand-sm bg-info navbar-dark">
+    <nav class="navbar navbar-expand-lg py-3 bg-info navbar-dark">
       <div class="container-fluid">
           <div class="navbar-header">
               <a class="navbar-brand" href="/home">
-                  <img src="{% static 'CPSapp/TourismIcon.jpg' %}" class="rounded-circle" alt="Logo" style="width:40px;">
+                  <img src="{% static 'CPSapp/TourismIcon.jpg' %}" class="rounded-circle" alt="Logo" style="width: 50px;">
                 </a>  
               <a class="navbar-brand" href="/home">Avoid Crowd</a>
           </div>
