--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
       <div class="container-fluid">
           <div class="navbar-header">
               <a class="navbar-brand" href="/home">
-                  <img src="{% static 'CPSapp/TourismIcon.jpg' %}" class="rounded-circle" alt="Logo" style="width: 50px;">
+                  <img src="{% static 'CPSapp/logo22.jpg' %}" class="rounded-circle" alt="Logo" style="width: 50px;">
                 </a>  
               <a class="navbar-brand" href="/home">Avoid Crowd</a>
           </div>
