--- a/templates/CPSapp/news.html
+++ b/templates/CPSapp/news.html
@@ -1,7 +1,48 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    {% for i in news_list %}
-        <a href="{{i.link}}"><b>{{i.title}}</b></a><br><hr>
-    {% endfor %}
+    <!-- start sw-rss-feed code --> 
+<script type="text/javascript"> 
+    rssfeed_url = new Array(); 
+    rssfeed_url[0]="https://news.google.com/search?q=tourism%20india&hl=en-IN&gl=IN&ceid=IN%3Aen";  
+    rssfeed_frame_width="1350"; 
+    rssfeed_frame_height="550"; 
+    rssfeed_scroll="on"; 
+    rssfeed_scroll_step="5"; 
+    rssfeed_scroll_bar="on"; 
+    rssfeed_target="_blank"; 
+    rssfeed_font_size="14"; 
+    rssfeed_font_face=""; 
+    rssfeed_border="on"; 
+    rssfeed_css_url=""; 
+    rssfeed_title="on"; 
+    rssfeed_title_name="News Related to Tourism"; 
+    rssfeed_title_bgcolor="#000"; 
+    rssfeed_title_color="#99cc00"; 
+    rssfeed_title_bgimage=""; 
+    rssfeed_footer="on"; 
+    rssfeed_footer_name=""; 
+    rssfeed_footer_bgcolor="#000"; 
+    rssfeed_footer_color="#333"; 
+    rssfeed_footer_bgimage=""; 
+    rssfeed_item_title_length="150"; 
+    rssfeed_item_title_color="#000"; 
+    rssfeed_item_bgcolor="#fff"; 
+    rssfeed_item_bgimage=""; 
+    rssfeed_item_border_bottom="on"; 
+    rssfeed_item_source_icon="off"; 
+    rssfeed_item_date="off"; 
+    rssfeed_item_description="on"; 
+    rssfeed_item_description_length="200"; 
+    rssfeed_item_description_color="#000"; 
+    rssfeed_item_description_link_color="#000"; 
+    rssfeed_item_description_tag="off"; 
+    rssfeed_no_items="10"; 
+    rssfeed_cache = "a7353bc6ba5ae254a96e6544ac86a546"; 
+    //--> 
+    </script> 
+    <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
+    <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+    <div style="color:#fff;font-size:10px; text-align:right; width:1350px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#fff;">Surfing Waves</a></div> 
+    <!-- end sw-rss-feed code -->
 {% endblock %}
