--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,151 @@
   display: none;
   text-align: center;
 }
+
+.crop-img{
+  max-height:130px;
+  max-width:100%;
+  margin-bottom: 10px;
+}
+
+div.scroll{
+  background-color: #919191;
+  width: 1000px;
+  height: 280px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  text-align: center;
+  padding: 20px;
+}
+.forward,
+.backward{
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+.forward {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.backward:hover,
+.forward:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+
+/*################################################################## */
+
+
+* {
+  box-sizing: border-box;
+}
+
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 65%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top:40%;
+  left: 26%;
+}
+
+/* Container for image text */
+.caption-container {
+  text-align: center;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Six columns side by side */
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* Add a transparency effect for thumnbail images */
+.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+#big{
+  height: 100%;max-height: 280px; margin-top: 25px;  width: 100%; max-width:585px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+
+
 </style>
 </head>
 <body onload="myFunction()" style="margin:0;">
@@ -80,16 +225,17 @@
             &nbsp;
             <li class="nav-item dropdown"><a class="navbar-brand dropdown-toggle" id="navbardrop" data-toggle="dropdown" href="#">Destination</a>
               <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Mumbai</a>
-                  <a class="dropdown-item" href="#">Pune</a>
-                  <a class="dropdown-item" href="#">Nashik</a>
-                  <a class="dropdown-item" href="#">Nagpur</a>
+                  <a class="dropdown-item" href="/mumbai">Mumbai</a>
+                  <a class="dropdown-item" href="/delhi">Delhi</a>
+                  <a class="dropdown-item" href="/goa">Goa</a>
+                  <a class="dropdown-item" href="/manali">Manali</a>
+                  <a class="dropdown-item" href="/rajasthan">Rajasthan</a>
               </div>
             </li>
               
             &nbsp;
             &nbsp;
-            <li><a class="navbar-brand" href="#">News</a></li>
+            <li><a class="navbar-brand" href="/news">News</a></li>
             &nbsp;
             &nbsp;
             <li><a class="navbar-brand" href="/aboutme">About</a></li>
